<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            style="@style/txt_process.doing"
            android:text="1"/>
        <LinearLayout
            style="@style/llt_spec_line"/>
        <TextView
            style="@style/txt_process.will"
            android:text="2"/>
        <LinearLayout
            style="@style/llt_spec_line"/>
        <TextView
            style="@style/txt_process.will"
            android:text="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            style="@style/txt_b_r_16_n"
            android:text="@string/guide_step1_ptitle" />
        <TextView
            android:layout_marginLeft="10dp"
            style="@style/txt_b_r_16_n"
            android:text="@string/guide_step1_pdesc1"/>
        <TextView
            android:layout_marginLeft="10dp"
            style="@style/txt_b_r_16_n"
            android:text="@string/guide_step1_pdesc2"/>
        <TextView
            android:layout_marginLeft="10dp"
            style="@style/txt_b_r_16_n"
            android:text="@string/guide_step1_pdesc3"/>
        <TextView
            android:layout_marginTop="10dp"
            style="@style/txt_b_r_16_n"
            android:text="@string/guide_step2_ptitle"/>
        <TextView
            android:layout_marginTop="10dp"
            style="@style/txt_b_r_16_n"
            android:text="@string/guide_step3_ptitle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20sp"
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btn_gfunc_next"
            android:layout_width="120dp"
            android:layout_height="50dp"
            style="@style/btn_title"
            android:text="@string/common_next"/>
    </LinearLayout>

</LinearLayout>
