<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_back_shadow">
        <TextView
            style="@style/txt_b_r_20"
            android:gravity="center"
            android:text="@string/login_title"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/login_wechat"
            style="@style/btn_title"
            android:onClick="onClickWechatLogin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:onClick="onClickLltConatact">
        <TextView
            style="@style/txt_b_r_12_n"
            android:text="@string/login_contact_us" />
    </LinearLayout>
    
</LinearLayout>