<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".WechatPayActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_back_shadow">

        <LinearLayout
            android:id="@+id/llt_main_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClickBackIcon">
            <ImageView
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ico_back"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <TextView
            style="@style/txt_b_r_20"
            android:gravity="center"
            android:text="@string/profile_wechat_payment"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >
            <ImageView
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            style="@style/txt_b_b_28"
            android:text="@string/wechat_recharge"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/payment_btn_01"
            style="@style/btn_title"
            android:onClick="onClickBtnPayment01"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/payment_btn_02"
            style="@style/btn_title"
            android:onClick="onClickBtnPayment02"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/payment_btn_03"
            style="@style/btn_title"
            android:onClick="onClickBtnPayment03"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/payment_btn_04"
            style="@style/btn_title"
            android:onClick="onClickBtnPayment04"/>
    </LinearLayout>
    
</LinearLayout>