<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:background="@color/txt_black"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/img_nav_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ico_avatar" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/back_avatar_black" />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginLeft="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_nav_name"
                style="@style/txt_w_b_22"
                android:text="@string/nav_name" />

            <TextView
                android:id="@+id/lbl_nav_location"
                android:layout_marginTop="10dp"
                style="@style/txt_w_r_12"
                android:text="@string/nav_location" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lbl_nav_payed"
                style="@style/txt_w_r_20"
                android:text="140"/>
            <TextView
                style="@style/txt_w_b_13"
                android:text="@string/nav_lbl_pay"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lbl_nav_calc"
                style="@style/txt_w_r_20"
                android:text="120"/>
            <TextView
                style="@style/txt_w_b_13"
                android:text="@string/nav_lbl_func"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lbl_nav_rcalc"
                style="@style/txt_w_r_20"
                android:text="24 K"/>
            <TextView
                style="@style/txt_w_b_13"
                android:text="@string/nav_lbl_rfunc"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>